--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,11 +9,15 @@
     </style>
 
     <style name="EditTextWhite" parent="TextAppearance.AppCompat">
-        <item name="android:textColorHint">@color/editTextColorWhite</item>
+        <item name="android:textColorHint">@color/colorWhite</item>
         <item name="android:textSize">@dimen/editText_textsize</item>
-        <item name="android:textColorPrimary">@color/editTextColorWhite</item>
-        <item name="colorAccent">@color/editTextColorWhite</item>
-        <item name="colorControlNormal">@color/editTextColorWhite</item>
-        <item name="colorControlActivated">@color/editTextColorWhite</item>
+        <item name="android:textColorPrimary">@color/colorWhite</item>
+        <item name="colorAccent">@color/colorWhite</item>
+        <item name="colorControlNormal">@color/colorWhite</item>
+        <item name="colorControlActivated">@color/colorWhite</item>
+    </style>
+
+    <style name="ButtonLight" parent="ButtonLight">
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 </resources>
