--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.sporlif.controllers.LoginActivity"
     android:background="@color/colorPrimary"
     android:focusable="true"
     android:focusableInTouchMode="true">
@@ -16,7 +13,7 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-        <RelativeLayout
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.7">
@@ -24,10 +21,10 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center"
                 android:background="@drawable/logo"/>
 
-        </RelativeLayout>
+        </android.support.design.widget.CoordinatorLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -47,10 +44,10 @@
                     android:theme="@style/EditTextWhite">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/alEditUsername"
+                        android:id="@+id/actLoginEtUserEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/al_hint_username"
+                        android:hint="@string/act_login_hint_user_email"
                         android:inputType="textEmailAddress"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -61,49 +58,47 @@
                     android:theme="@style/EditTextWhite">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/alEditPassword"
+                        android:id="@+id/actLoginEtPass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/al_hint_password"
+                        android:hint="@string/act_login_hint_pass"
                         android:inputType="textPassword"/>
 
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/alButtonLogin"
+                    android:id="@+id/actLoginBtnLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/al_button_login"
+                    android:text="@string/act_login_btn_login"
                     android:theme="@style/ButtonLight"
                     android:backgroundTint="@color/colorLightBlue">
 
                 </Button>
 
                 <TextView
-                    android:id="@+id/alForgetPassword"
-                    android:layout_width="match_parent"
+                    android:id="@+id/actLoginTxtRecoverPass"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/padding_fields"
-                    android:text="@string/al_forget_password"
-                    android:textColor="@color/colorWhite"
-                    android:textAlignment="center"
-                    android:gravity="top"/>
+                    android:text="@string/act_login_txt_recover_pass"
+                    android:textColor="@color/colorWhite"/>
 
-                <RelativeLayout
+                <android.support.design.widget.CoordinatorLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="bottom|center"
-                    >
+                    android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/alCreateAccount"
+                        android:id="@+id/actLoginTxtSignIn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/padding_fields"
-                        android:text="@string/al_create_account"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:text="@string/act_login_txt_sign_in"
                         android:textColor="@color/colorWhite" />
 
-                </RelativeLayout>
+                </android.support.design.widget.CoordinatorLayout>
 
             </LinearLayout>
 
