--- a/app/src/main/res/layout/act_regist.xml
+++ b/app/src/main/res/layout/act_regist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -34,8 +35,9 @@
                 android:orientation="horizontal"
                 android:weightSum="3">
 
-                <View style="@style/Divider"
-                    android:layout_weight="1"/>
+                <View
+                    style="@style/Divider"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -43,11 +45,11 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/act_regist_sep_login_data"
-                    android:textColor="@color/colorLightGray"/>
+                    android:textColor="@color/colorLightGray" />
 
                 <View
                     style="@style/Divider"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
@@ -100,8 +102,9 @@
                 android:orientation="horizontal"
                 android:weightSum="3">
 
-                <View style="@style/Divider"
-                    android:layout_weight="1"/>
+                <View
+                    style="@style/Divider"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -109,11 +112,11 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="@string/act_regist_sep_user_data"
-                    android:textColor="@color/colorLightGray"/>
+                    android:textColor="@color/colorLightGray" />
 
                 <View
                     style="@style/Divider"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
