--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="@dimen/padding_fields">
+                android:padding="@dimen/padding_fields_sides">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
