Signed-off-by: Daniel <danielernestodaza@hotmail.com>

--- a/app/src/main/res/layout/activity_act_recover_pass.xml
+++ b/app/src/main/res/layout/activity_act_recover_pass.xml
@@ -7,7 +7,7 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <include layout="@layout/actionbar_toolbar"/>
+    <!-- <include layout="@layout/actionbar_toolbar"/> -->
 
         <ScrollView
             android:layout_width="match_parent"
