--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="editText_textsize">16sp</dimen>
     <dimen name="padding_fields_sides">23dp</dimen>
     <dimen name="padding_fields">20dp</dimen>
+
+    <!-- InputText -->
+    <dimen name="margin_top">11dp</dimen>
+    <dimen name="margin_bottom">11dp</dimen>
+
+    <!-- TextView icons -->
+    <dimen name="tvi_size">30dp</dimen>
+    <dimen name="tvi_marging_right">7dp</dimen>
+
 </resources>
