--- a/app/src/main/res/layout/frg_enter_code.xml
+++ b/app/src/main/res/layout/frg_enter_code.xml
@@ -27,7 +27,8 @@
                 android:text="@string/frg_enter_code_email"
                 android:textStyle="bold"
                 android:textAlignment="center"
-                android:layout_marginBottom="@dimen/margin_bottom"/>
+                android:layout_marginBottom="@dimen/margin_bottom"
+                android:id="@+id/frgEnterCodeTxtEmail"/>
 
             <TextView
                 android:layout_width="match_parent"
